Switch To AllAuth Login Page And Fix the Password Change Page

--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -1,16 +1,28 @@
 {% extends "main/main_base.html" %}
 
 {% load i18n %}
+{% load crispy_forms_tags %}
 
-{% block head_title %}{% trans "Change Password" %}{% endblock %}
+{% block page_header %}
+    <div class="full-row">
+        <div class="container">
+            <h4>{% trans "Change Password" %}</h4>
+        </div>
+    </div>
+{% endblock %}
 
-{% block content %}
-    <h1>{% trans "Change Password" %}</h1>
-
-    <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" name="action">{% trans "Change Password" %}</button>
-        <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-    </form>
+{% block main_content %}
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <form method="POST" action="{% url 'account_change_password' %}" class="form-boder password_change">
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    <button class="btn btn-primary" type="submit" name="action">{% trans "Change Password" %}</button>
+                    &nbsp;&nbsp;&nbsp;&nbsp;
+                    <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+                </form>
+            </div>
+        </div>
+    </div>
 {% endblock %}
