--- a/templates/main/project_detail.html
+++ b/templates/main/project_detail.html
@@ -287,7 +287,7 @@
 <script>
     window.addEventListener("map:init", function (e) {
         var detail = e.detail;
-        detail.map.setView([{{ project.location.coordinates|last }}, {{ project.location.coordinates|first }}], 13);
+        detail.map.setView([{{ project.location.coordinates|last }}, {{ project.location.coordinates|first }}], {{ default_zoom }});
         L.marker([{{ project.location.coordinates|last }}, {{ project.location.coordinates|first }}]).addTo(detail.map);
     }, false);
 </script>
