UI/UX/HTML Fixes and Enhancements

--- a/templates/dashboards/my_admin.html
+++ b/templates/dashboards/my_admin.html
@@ -46,7 +46,7 @@
                     {% empty %}
                         <tr>
                             <td colspan="5" style="text-align: center">
-                                <strong>{% trans "There Are No Projects Add By You!" %}</strong>
+                                <strong>{% trans "There Are No Projects Added By You!" %}</strong>
                             </td>
                         </tr>
                     {% endfor %}
