--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -38,15 +38,25 @@
                         {% endif %}
 
                         <form class="login" method="POST" action="{% url 'account_login' %}">
-                          {% csrf_token %}
-                          {{ form|crispy }}
-                          {% if redirect_field_value %}
-                          <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-                          {% endif %}
-                          <a class="button secondaryAction" href="{% url 'account_reset_password' %}">
-                              {% trans "Forgot Password?" %}
-                          </a>
-                          <button class="btn btn-primary mb-3" type="submit">{% trans "Sign In" %}</button>
+                            <div class="row row-cols-1 g-3">
+                                {% csrf_token %}
+                                {% if redirect_field_value %}
+                                    <input type="hidden" name="{{ redirect_field_name }}"
+                                           value="{{ redirect_field_value }}"/>
+                                {% endif %}
+                                {{ form|crispy }}
+                                <div class="col">
+                                    <button type="submit" class="btn btn-primary mb-3">Login</button>
+                                </div>
+                                <div class="col">
+                                    <a href="{% url 'account_reset_password' %}" class="text-dark d-table py-1">Forgot
+                                        Password or Username</a>
+                                    <a href="{% url 'accounts:register-client' %}" class="text-dark d-table py-1"><u>Create
+                                        Client Account</u></a>
+                                    <a href="{% url 'accounts:register-developer' %}" class="text-dark d-table py-1"><u>Create
+                                        Developer Account</u></a>
+                                </div>
+                            </div>
                         </form>
                     </div>
                 </div>
