--- a/templates/main/registration.html
+++ b/templates/main/registration.html
@@ -1,6 +1,8 @@
 {% extends 'main/main_base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
+{% load i18n %}
+
 {% block main_content %}
 <!--============== Signup Form Start ==============-->
 <div class="full-row">
@@ -15,7 +17,7 @@
                                 {% csrf_token %}
                                 {{ form|crispy }}
                                 <div class="col">
-                                    <button type="submit" class="btn btn-primary mb-3">Registr</button>
+                                    <button type="submit" class="btn btn-primary mb-3">{% trans 'Register' %}</button>
                                 </div>
                                 <div class="col">
                                     <a href="{% url 'accounts:forget-password' %}" class="text-dark d-table py-1">Forgot Password or Username</a>
