--- a/templates/main/phases.html
+++ b/templates/main/phases.html
@@ -12,8 +12,12 @@
             <div class="row">
                 <div class="col-lg-3">
                     <div class="fag-category list-color-general list-text-hover-primary py-5 px-4 bg-white border rounded mb-5">
-                        <li><a href="{% url "main_app:create-main-phase" project.pk %}" class="text-primary me-4 mb-1">Add New Main Phase <i
-                                class="fas fa-edit"></i></a></li>
+                        <li>
+                            <a href="{% url "main_app:create-main-phase" project.pk %}" class="text-primary me-4 mb-1">
+                                {% trans "Add New Main Phase" %}
+                                <i class="fas fa-edit"></i>
+                            </a>
+                        </li>
                         <ul>
                             {% for phase in project.main_phases.all %}
                                 <li>
