--- a/templates/main/main_base.html
+++ b/templates/main/main_base.html
@@ -158,11 +158,11 @@
                         <div class="footer-widget footer-nav mb-4">
                             <h3 class="widget-title mb-4">{% trans "Quick Links" %}</h3>
                             <ul>
-                                <li><a href="#">{% treans "Our Services" %}</a></li>
-                                <li><a href="#">{% treans "Investment Solution" %}</a></li>
-                                <li><a href="#">{% treans "requenly Ask Question" %}</a></li>
-                                <li><a href="#">{% treans "ow It Work" %}</a></li>
-                                <li><a href="#">{% treans "ecome a Member" %}</a></li>
+                                <li><a href="#">{% trans "Our Services" %}</a></li>
+                                <li><a href="#">{% trans "Investment Solution" %}</a></li>
+                                <li><a href="#">{% trans "requenly Ask Question" %}</a></li>
+                                <li><a href="#">{% trans "ow It Work" %}</a></li>
+                                <li><a href="#">{% trans "ecome a Member" %}</a></li>
                             </ul>
                         </div>
                     </div>
